--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -79,13 +79,12 @@ body:
   validations:
     required: true
 
-- type: checkboxes
+- type: input
   id: issueSearch
   attributes:
     label: Have you tried to use GitHub issue search?
     description: Maybe there is already a similar issue solved.
-    options:
-      - label: 'Yes'
+    placeholder: Yes/No
   validations:
     required: true
 
