--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -2,4 +2,6 @@ blank_issues_enabled: false
 contact_links:
 - name: Question
   url: https://postgresteam.slack.com/archives/C9XPYG92A
-  about: "Please ask question about Patroni on PostgreSQL Slack. Invitation link to Postgres workspace: https://join.slack.com/t/postgresteam/shared_invite/zt-1qj14i9sj-E9WqIFlvcOiHsEk2yFEMjA"
+  about: |
+    Please ask question about Patroni on PostgreSQL Slack.
+    Invitation link to Postgres workspace: https://join.slack.com/t/postgresteam/shared_invite/zt-1qj14i9sj-E9WqIFlvcOiHsEk2yFEMjA"
